--- a/README.Rmd
+++ b/README.Rmd
@@ -31,19 +31,20 @@ devtools::install_github("Layalchristine24/simulreturns")
 
 ## Example
 
-This is a basic example which shows you how to solve compute the final value of an investment of 5000 units after 30 periods, with compound interests and immediate annuities, assuming an expected return of 10\% in average and annuities of 12000 units.
+This is a basic example which shows you how to solve compute the final value of an investment of 5000 units after 30 periods, with compound interest and immediate annuities, assuming an expected return of 10\% in average and annuities of 12000 units.
 
-```{r example}
+```{r example, echo=TRUE}
 library(simulreturns)
-library(ggplot2)
 library(dplyr)
 
+# Parameters
 .n_per <- 30
 .v_0 <- 5000
 .exp_return <- 10
 .compound <- TRUE
 .x_yearly <- 12000
 .immediate <- TRUE
+
 # Compound return, with immediate annuities
 FINAL_VALUE_CMP_IMM_ANNUITIES <- get_final_value(
   n_per = .n_per,
@@ -53,6 +54,7 @@ FINAL_VALUE_CMP_IMM_ANNUITIES <- get_final_value(
   x_yearly = .x_yearly,
   immediate = .immediate
 )
+FINAL_VALUE_CMP_IMM_ANNUITIES
 ```
 
 
@@ -64,18 +66,20 @@ summary(FINAL_VALUE_CMP_IMM_ANNUITIES)
 
 
 ```{r plot_final_value, echo = FALSE}
+library(ggplot2)
+
 FINAL_VALUE_CMP_IMM_ANNUITIES %>% 
   ggplot(aes(x = period, y = final_value)) +
-  geom_line(size = 1.1) +
+  geom_line(linewidth = 1.1) +
   theme_light() +
   labs(
-    title = "Final value of an investment, with compound interests and immediate annuities",
-    subtitle = paste0("Number of periods: ",.n_per, " initial capital: ", .v_0, "exp. return: ", .exp_return, " annuities: ", .x_yearly),
+    title = "Investment final value, with compound interest and immediate annuities",
+    subtitle = paste0("Number of per.: ",.n_per, ", init. capital: ", .v_0, " units, exp. return: ", .exp_return, "%/year, annuities: ", .x_yearly, " units"),
     x = "Periods",
-    y = "Final value after x periods",
+    y = "Final value after x periods (in units of wished currency)",
     caption = paste(
       format(Sys.Date(), "%d.%m.%Y"),
-      "Layal Lettry",
+      "Layal C. Lettry",
       sep = ", "
     )
   ) +
@@ -83,9 +87,6 @@ FINAL_VALUE_CMP_IMM_ANNUITIES %>%
     legend.position = "bottom", axis.text = element_text(size = 12),
     axis.title = element_text(size = 12)
   ) 
-# +
-#   scale_x_discrete(breaks = c(20, 30, 40, 50, 60, 70, 80, 90)) +
-#   scale_color_discrete("Sexe", labels = "Femme", "Homme")
   
 ```
 
